Fix: fix page content spacing

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -77,6 +77,8 @@
         
     #footer .icon {
         flex-direction: row;
+        margin-left: 15px;
+
     }
              
     #footer .music-ctr {
